--- a/index.html
+++ b/index.html
@@ -1,11 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title></title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+		rel="stylesheet">
 </head>
+
 <body>
-   
+	<section id="header">
+		<a href="#"><img src="logo.png" class="logo" alt=""></a>
+		<div class="nav-menu">
+			<ul id="navbar">
+				<li>
+					<a href="hack.html">Beautiful Places</a>
+				</li>
+				<li>
+					<a href="event.html">Events</a>
+				</li>
+				<li>
+					<a href="">Abouit Us</a>
+				</li>
+				<li>
+					<a href="">Contact Us</a>
+				</li>
+				<i id="close" class="ri-close-line"></i>
+			</ul>
+		</div>
+		<div class="nav-details">
+			<select id="select">
+				<option>En</option>
+				<option>Kz</option>
+				<option>Ru</option>
+			</select>
+			<i id="search" class="ri-search-line"></i>
+			<i id="bar" class="ri-menu-line"></i>
+		</div>
+	</section>
+	<section id="prodetails" class="section-p1">
+		<div class="prodetails">
+			<div class="button">
+				<p>Explore the world!</p>
+			</div>
+			<div class="main">
+				<h1>Travel <span>top <br> destintaion </span> of <br> the world </h1>
+			</div>
+		</div>
+		<div class="proimages">
+			<img src="image 1 (1).png" alt="">
+			<div class="min">
+				<div class="first">
+					<img src="dc5a1d98-f8a7-40e8-88ed-13baa4702676.jpg" alt="">
+				</div>
+				<div class="telegram">
+					<i class="ri-telegram-fill"></i>
+				</div>
+				<div class="min2">
+					<img src="dc5a1d98-f8a7-40e8-88ed-13baa4702676.jpg" alt="">
+				</div>
+				<div class="big">
+					<img src="dc5a1d98-f8a7-40e8-88ed-13baa4702676.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="page_info" class="section-p1">
+		<img
+			src="https://sxodim.com/uploads/posts/2023/06/13/optimized/3c6e49994dc64446d85113d4e7a09804_1400x790-q-85.jpg"
+			alt="">
+		<div class="right-details">
+			<h1>Koksay</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing <br>
+				Lorem ipsum dolor sit amet consectetur adipisicing <br> Lorem ipsum dolor sit amet consectetur adipisicing<br>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit<br> Lorem ipsum dolor sit amet consectetur adipisicing elit
+				<br>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed 
+			</p>
+			<a href="hack.html"><button>More About Beautiful Places</button></a>
+		</div>
+	</section>
+	<section id="page_info" class="section-p1">
+		<div class="right-details">
+			<h1>Nauryz Fest</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing <br>
+				Lorem ipsum dolor sit amet consectetur adipisicing <br> Lorem ipsum dolor sit amet consectetur adipisicing<br>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit<br> Lorem ipsum dolor sit amet consectetur adipisicing elit
+				<br>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed 
+			</p>
+			<a href="event.html"><button>More About Events</button></a>
+		</div>
+		<img
+			src="https://sxodim.com/uploads/posts/2024/03/12/optimized/9f150502e464c613700760b0b8d40d48_545x305-q-85.jpg"
+			alt="">
+	</section>
+	<script src="node.js"></script>
 </body>
+
 </html>
