--- a/eventDescription/eventDes.html
+++ b/eventDescription/eventDes.html
@@ -5,21 +5,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="man.css">
+	<link rel="stylesheet" href="eventDes.css">
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
 	<section id="header">
-    <a href="index.html"><img src="logo.png" class="logo" alt=""></a>
+    <a href="/main/main.html"><img src="logo.png" class="logo" alt=""></a>
     <div class="nav-menu">
       <ul id="navbar">
         <li>
-          <a href="hack.html">Beautiful Places</a>
-        </li>
-        <li>
-          <a href="event.html">Events</a>
-        </li>
+					<a href="/placeList/placeList.html">Beautiful Places</a>
+				</li>
+				<li>
+					<a href="/eventList/eventList.html">Events</a>
+				</li>
         <li>
           <a href="">Abouit Us</a>
         </li>
@@ -43,7 +43,7 @@
 		<div class="details">
 			<h1>Kairat Nurtas</h1>
 			<div class="link-detail">
-				<a href="event.html"><i class="ri-home-4-fill"></i></a>
+				<a href="/eventList/eventList.html"><i class="ri-home-4-fill"></i></a>
 				<p>Taraz</p>
 				<i class="ri-arrow-right-wide-fill"></i>
 				<div class="star">
