--- a/eventList/eventList.html
+++ b/eventList/eventList.html
@@ -5,20 +5,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="style copy.css">
+	<link rel="stylesheet" href="eventList.css">
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
 	<section id="header">
-		<a href="index.html"><img src="logo.png" class="logo" alt=""></a>
+		<a href="/main/main.html"><img src="logo.png" class="logo" alt=""></a>
 		<div class="nav-menu">
 			<ul id="navbar">
 				<li>
-					<a href="hack.html">Beautiful Places</a>
+					<a href="/placeList/placeList.html">Beautiful Places</a>
 				</li>
 				<li>
-					<a href="">Events</a>
+					<a href="/eventList/eventList.html">Events</a>
 				</li>
 				<li>
 					<a href="">Abouit Us</a>
@@ -56,7 +56,7 @@
 				<p>10 Jul, 2024 --- 15000KZT</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing <br>
 					elit. In sed et donec purus viverra. Sit justo velit, eu <br> sed sollicitudin tempus, </p>
-				<a href="man.html"><button>READ MORE</button></a>
+				<a href="/eventDescription/eventDes.html"><button>READ MORE</button></a>
 			</div>
 		</div>
 		<div class="event-cont">
