--- a/main/main.html
+++ b/main/main.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="main.css">
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,13 +20,13 @@
 		<div class="nav-menu">
 			<ul id="navbar">
 				<li>
-					<a href="hack.html">Beautiful Places</a>
+					<a href="/placeList/placeList.html">Beautiful Places</a>
 				</li>
 				<li>
-					<a href="event.html">Events</a>
+					<a href="/eventList/eventList.html">Events</a>
 				</li>
 				<li>
-					<a href="">Abouit Us</a>
+					<a href="">About Us</a>
 				</li>
 				<li>
 					<a href="">Contact Us</a>
@@ -54,19 +54,19 @@
 			</div>
 		</div>
 		<div class="proimages">
-			<img src="image 1 (1).png" alt="">
+			<img src="/img/image 1 (1).png" alt="">
 			<div class="min">
 				<div class="first">
-					<img src="dc5a1d98-f8a7-40e8-88ed-13baa4702676.jpg" alt="">
+					<img src="/img/dc5a1d98-f8a7-40e8-88ed-13baa4702676.jpg" alt="">
 				</div>
 				<div class="telegram">
 					<i class="ri-telegram-fill"></i>
 				</div>
 				<div class="min2">
-					<img src="dc5a1d98-f8a7-40e8-88ed-13baa4702676.jpg" alt="">
+					<img src="/img/1eee4b6cfa4e52a5e1995b30736a964d.png" alt="">
 				</div>
 				<div class="big">
-					<img src="dc5a1d98-f8a7-40e8-88ed-13baa4702676.jpg" alt="">
+					<img src="/img/3f5dd99a65c9f4546bb21c07f247587d.png" alt="">
 				</div>
 			</div>
 		</div>
