--- a/payment/pay.html
+++ b/payment/pay.html
@@ -15,7 +15,7 @@
 			<div class="info-pay">
 				<div class="back">
 					<i class="ri-arrow-left-s-line"></i>
-					<a href="../man.html"><p>Back</p></a>
+					<a href="/eventDescription/eventDes.html"><p>Back</p></a>
 				</div>
 				<div class="line"></div>
 				<div class="subscribe">
@@ -103,7 +103,7 @@
 					<p>Pay faster and everywhere link is accepted</p>
 				</div>
 			</div>
-			<a href="../man.html"><button class="bot">Subscribe</button></a>
+			<a href="/eventDescription/eventDes.html"><button class="bot">Subscribe</button></a>
 		</div>
 	</section>
 </body>
