--- a/place description/description.html
+++ b/place description/description.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="description.css" />
   </head>
   <body>
     <section id="header">
-    <a href="index.html"><img src="logo.png" class="logo" alt=""></a>
+    <a href="/main/main.html"><img src="logo.png" class="logo" alt=""></a>
     <div class="nav-menu">
       <ul id="navbar">
-        <li>
-          <a href="hack.html">Beautiful Places</a>
-        </li>
-        <li>
-          <a href="event.html">Events</a>
-        </li>
+       	<li>
+					<a href="/placeList/placeList.html">Beautiful Places</a>
+				</li>
+				<li>
+					<a href="/eventList/eventList.html">Events</a>
+				</li>
         <li>
           <a href="">Abouit Us</a>
         </li>
