--- a/placeList/placeList.html
+++ b/placeList/placeList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="hack.css" />
+    <link rel="stylesheet" href="placeList.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -14,14 +14,14 @@
     <div class="maincont">
       <div class="main">
         <section id="header">
-          <a href="index.html"><img src="logo.png" class="logo" alt="" /></a>
+          <a href="/main/main.html"><img src="logo.png" class="logo" alt="" /></a>
           <div class="nav-menu">
             <ul id="navbar">
 				<li>
-					<a href="hack.html">Beautiful Places</a>
+					<a href="/placeList/placeList.html">Beautiful Places</a>
 				</li>
 				<li>
-					<a href="event.html">Events</a>
+					<a href="/eventList/eventList.html">Events</a>
 				</li>
 				<li>
 					<a href="">Abouit Us</a>
@@ -49,7 +49,7 @@
 
      <section class="container">
       <div class="container2">
-        <img class="image" src="4fc5f5ce00711c9a2c3824689cc623cd.jpg" alt="" />
+        <img class="image" src="/img/4fc5f5ce00711c9a2c3824689cc623cd.jpg" alt="" />
         <h2>Tekturmas</h2>
         <h3>Historical complex</h3>
         <br />
@@ -59,10 +59,10 @@
         </p>
         <br /><br />
         <br />
-        <a href="about.html"><button class="more">More &#x27F6</button></a>
+        <a href="/place description/description.html"><button class="more">More &#x27F6</button></a>
       </div>
       <div class="container2">
-        <img class="image" src="70ee174e58f4b9c31c0c7f23119142fa.jpg" alt="" />
+        <img class="image" src="/img/70ee174e58f4b9c31c0c7f23119142fa.jpg" alt="" />
         <h2>Mart</h2>
         <h3>Shopping Centre</h3>
         <br />
@@ -72,10 +72,10 @@
         </p>
         <br /><br />
         <br />
-        <a href=""><button class="more">More &#x27F6</button></a>
+        <a href="/place description/description.html"><button class="more">More &#x27F6</button></a>
       </div>
       <div class="container2">
-        <img class="image" src="4fc5f5ce00711c9a2c3824689cc623cd.jpg" alt="" />
+        <img class="image" src="/img/4fc5f5ce00711c9a2c3824689cc623cd.jpg" alt="" />
         <h2>Tekturmas</h2>
         <h3>Historical complex</h3>
         <br />
@@ -88,7 +88,7 @@
         <button class="more">More &#x27F6</button>
       </div>
       <div class="container2">
-        <img class="image" src="70ee174e58f4b9c31c0c7f23119142fa.jpg" alt="" />
+        <img class="image" src="/img/70ee174e58f4b9c31c0c7f23119142fa.jpg" alt="" />
         <h2>Mart</h2>
         <h3>Shopping Centre</h3>
         <br />
@@ -101,7 +101,7 @@
         <button class="more">More &#x27F6</button>
       </div>
       <div class="container2">
-        <img class="image" src="4fc5f5ce00711c9a2c3824689cc623cd.jpg" alt="" />
+        <img class="image" src="/img/4fc5f5ce00711c9a2c3824689cc623cd.jpg" alt="" />
         <h2>Tekturmas</h2>
         <h3>Historical complex</h3>
         <br />
@@ -114,7 +114,7 @@
         <button class="more">More &#x27F6</button>
       </div>
       <div class="container2">
-        <img class="image" src="70ee174e58f4b9c31c0c7f23119142fa.jpg" alt="" />
+        <img class="image" src="/img/70ee174e58f4b9c31c0c7f23119142fa.jpg" alt="" />
         <h2>Mart</h2>
         <h3>Shopping Centre</h3>
         <br />
