--- a/main/main.html
+++ b/main/main.html
@@ -83,7 +83,7 @@
 				<br>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed 
 			</p>
-			<a href="hack.html"><button>More About Beautiful Places</button></a>
+			<a href="/placeList/placeList.html"><button>More About Beautiful Places</button></a>
 		</div>
 	</section>
 	<section id="page_info" class="section-p1">
@@ -95,7 +95,7 @@
 				<br>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed 
 			</p>
-			<a href="event.html"><button>More About Events</button></a>
+			<a href="/eventList/eventList.html"><button>More About Events</button></a>
 		</div>
 		<img
 			src="https://sxodim.com/uploads/posts/2024/03/12/optimized/9f150502e464c613700760b0b8d40d48_545x305-q-85.jpg"
